--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
 <body>
     <section id="landing">
         <nav>
-            <div class="nav__container">
-                <div class="row">  
-                    <div class="logo">
-                        <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Treact Logo">
-                        <h2><span class="black">Treact</span></h2>
-                    </div>
-                    <ul class="nav__links">
-                       <li><a href="#">About</a></li>
-                       <li><a href="#">Blog</a></li>
-                       <li><a href="#">Pricing</a></li>
-                       <li><a href="#">Contact Us</a></li>
-                    </ul>
-                       <button class="btn btn__nav">Get Started</button>
+            <div class="row nav__row">
+                <div class="nav__logo">
+                  <img class="nav__logo--img" src="assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Logo">
+                    
+                      <h1 class="nav__title">Treact</h1>
+                    
                 </div>
+
+                   <div class="nav__links">
+                      <a href="#" class="nav__link">About</a>
+                      <a href="#" class="nav__link">Blog</a>
+                      <a href="#" class="nav__link">Services</a>
+                      <a href="#" class="nav__link">Contact Us</a>
+                      <a href="#" class="nav__link">Login</a>
+                      <a href="#" class="nav__link nav__link--primary">Sign Up</a>
+                    </div>
             </div>
         </nav>
-    </section>
+   </section>
+
 </body>
 </html>
