--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 <body>
     <section id="landing">
         <nav>
-            <div class="row nav__row">
+            <div class="nav nav__row">
                 <div class="nav__logo">
                   <img class="nav__logo--img" src="assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Logo">
-                    
                       <h1 class="nav__title">Treact</h1>
-                    
                 </div>
-
-                   <div class="nav__links">
+                    <div class="nav__links">
                       <a href="#" class="nav__link">About</a>
                       <a href="#" class="nav__link">Blog</a>
                       <a href="#" class="nav__link">Services</a>
@@ -31,6 +28,16 @@
             </div>
         </nav>
    </section>
+   <header>
+        <div class="conatainer">
+            <div class="header__description">
+              <h1>Beautiful React Templates<span class="purple"> for you.</span></h1>
+                <p class="header__description--para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+                <input type="text" class="header__email--input" placeholder="Your E-Mail Address" fdprocessedid="homub8">
+                <button class="header__email--btn" fdprocessedid="ehpyt1">Get Started</button>
+            </div>
+         </div>
+    </header>
 
 </body>
 </html>
