--- a/index.html
+++ b/index.html
@@ -12,32 +12,47 @@
 <body>
     <section id="landing">
         <nav>
-            <div class="nav nav__row">
-                <div class="nav__logo">
-                  <img class="nav__logo--img" src="assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Logo">
-                      <h1 class="nav__title">Treact</h1>
-                </div>
-                    <div class="nav__links">
-                      <a href="#" class="nav__link">About</a>
-                      <a href="#" class="nav__link">Blog</a>
-                      <a href="#" class="nav__link">Services</a>
-                      <a href="#" class="nav__link">Contact Us</a>
-                      <a href="#" class="nav__link">Login</a>
-                      <a href="#" class="nav__link nav__link--primary">Sign Up</a>
+            <div class="row">
+                <div class="nav__row">
+                    <div class="nav__logo">
+                        <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Logo">
+                         <h1 class="nav__title">Treact</h1>
                     </div>
+                       <div class="nav__links">
+                          <a href="#" class="nav__link">About</a>
+                          <a href="#" class="nav__link">Blog</a>
+                          <a href="#" class="nav__link">Pricing</a>
+                          <a href="#" class="nav__link">Contact Us</a>
+                          <a href="#" class="nav__link">Login</a>
+                          <a href="#" class="nav__link nav__link--primary">Sign Up</a>
+                        </div>
+                    
+                </div>
             </div>
         </nav>
-   </section>
-   <header>
-        <div class="conatainer">
-            <div class="header__description">
-              <h1>Beautiful React Templates<span class="purple"> for you.</span></h1>
-                <p class="header__description--para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
-                <input type="text" class="header__email--input" placeholder="Your E-Mail Address" fdprocessedid="homub8">
-                <button class="header__email--btn" fdprocessedid="ehpyt1">Get Started</button>
+    </section>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="header__description">
+                    <h1>Beautiful React Templates<span class="purple"> for you.</span></h1>
+                    <p class="header__description--para">Our templates are easy to setup, understand and customize.
+                        Fully modular components with a variety of pages and components.
+                    </p>
+                    <div class="input__container">
+                        <input type="text" class="email__input" placeholder="Your E-Mail Address">
+                        <button class="email__btn">Get Started</button>
+                    </div>
+                        <p class="header__customer--title">OUR TRUSTED CUSTOMERS</p>
+                        <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="customer__logo">
+                </div> 
+                <figure class="header__img--wrapper">
+                    <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
+                </figure>
             </div>
-         </div>
+        </div>
     </header>
+    
 
 </body>
 </html>
