--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Module 2 Final Project (Treact Website)</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/d040ee6d7f.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </head>
 <body>
@@ -18,7 +19,7 @@
                         <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Logo">
                          <h1 class="nav__title">Treact</h1>
                     </div>
-                       <div class="nav__links">
+                        <div class="nav__links">
                           <a href="#" class="nav__link">About</a>
                           <a href="#" class="nav__link">Blog</a>
                           <a href="#" class="nav__link">Pricing</a>
@@ -26,25 +27,25 @@
                           <a href="#" class="nav__link">Login</a>
                           <a href="#" class="nav__link nav__link--primary">Sign Up</a>
                         </div>
-                        <button class="btn__menu" onclick="openMenu">
-     
-                        </button>
-            
-                </div>
-            </div>    
-        </nav>  
-        <div class="menu">
-           <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-           </button>
+                </div>        
+            </div>  
+            <button class="btn__menu" onclick="openMenu()">
+              <i class="fas fa-bars"></i>    
+            </button>  
+            <div class="menu__backdrop menu__links">
+                <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                    <i class="fas fa-times"></i>  
+                </button>
                 <div class="menu__links">
-                          <a href="About" class="menu__link" onclick="closeMenu()">About</a>
-                          <a href="Blog" class="menu__link" onclick="closeMenu()">Blog</a>
-                          <a href="Pricing" class="menu__link" onclick="closeMenu()">Pricing</a>
-                          <a href="Contact Us" class="menu__link" onclick="closeMenu()">Contact Us</a>
-                          <a href="logim" class="menu__link" onclick="closeMenu()">Login</a>
-                          <a href="Sign Up" class="menu__link nav__link--primary" onclick="closeMenu()">Sign Up</a>
-                </div> 
-        </div>
+                    <i class="" a href="#" class="menu__link">About</a>
+                    <i class="" a href="#" class="menu__link">Blog</a>
+                    <i class="" a href="#" class="menu__link">Pricing</a>
+                    <i class="" a href="#" class="menu__link">Contact Us</a>
+                    <i class="" a href="#" class="menu__link">Login</a>
+                    <i class="" a href="#" class="menu__link menu__link--primary">Sign Up</a>
+                </div>
+            </div>
+        </nav>  
     </section>                                                                           
     <header>
         <div class="container">
