--- a/index.html
+++ b/index.html
@@ -19,30 +19,38 @@
                         <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Logo">
                          <h1 class="nav__title">Treact</h1>
                     </div>
-                        <div class="nav__links">
-                          <a href="#" class="nav__link">About</a>
-                          <a href="#" class="nav__link">Blog</a>
-                          <a href="#" class="nav__link">Pricing</a>
-                          <a href="#" class="nav__link">Contact Us</a>
-                          <a href="#" class="nav__link">Login</a>
-                          <a href="#" class="nav__link nav__link--primary">Sign Up</a>
-                        </div>
-                </div>        
-            </div>  
-            <button class="btn__menu" onclick="openMenu()">
-              <i class="fas fa-bars"></i>    
-            </button>  
-            <div class="menu__backdrop menu__links">
-                <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-                    <i class="fas fa-times"></i>  
-                </button>
-                <div class="menu__links">
-                    <i class="" a href="#" class="menu__link">About</a>
-                    <i class="" a href="#" class="menu__link">Blog</a>
-                    <i class="" a href="#" class="menu__link">Pricing</a>
-                    <i class="" a href="#" class="menu__link">Contact Us</a>
-                    <i class="" a href="#" class="menu__link">Login</a>
-                    <i class="" a href="#" class="menu__link menu__link--primary">Sign Up</a>
+                    <ul class="nav__links">
+                          <li><a href="#" class="nav__link">About</a></li>
+                          <li><a href="#" class="nav__link">Blog</a></li>
+                          <li><a href="#" class="nav__link">Pricing</a></li>
+                          <li><a href="#" class="nav__link">Contact Us</a></li>
+                          <li><a href="#" class="nav__link">Login</a></li>
+                          <li><a href="#" class="nav__link nav__link--primary">Sign Up</a></li>
+                    </ul>
+                        <button class="btn__menu" onclick="openMenu()">
+                           <i class="fas fa-bars"></i>
+                        </button>         
+
+                        <div class="menu__backdrop">
+                            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                            <i class="fas fa-times"></i>
+                            </button>
+                    <ul class="menu__links">
+                            <li class="menu__list">
+                               <a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
+                            <li class="menu__list">
+                               <a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
+                           <li class="menu__list">
+                               <a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
+                            <li class="menu__list">
+                               <a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a></li>
+                            <li class="menu__list">
+                               <a href="#" class="menu__link" onclick="closeMenu()">Login</a></li>
+                            <li class="menu__list">
+                              <a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign Up</a>
+                            </li>
+                        </div>    
+                    </ul>
                 </div>
             </div>
         </nav>  
