--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <section id="landing">
         <nav class="nav">
-            <div class="row">
-                <div class="nav__row">
+            <div class="nav__row">
                     <div class="nav__logo">
                         <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Logo">
                          <h1 class="nav__title">Treact</h1>
@@ -28,7 +27,7 @@
                           <li><a href="#" class="nav__link nav__link--primary">Sign Up</a></li>
                     </ul>
                         <button class="btn__menu" onclick="openMenu()">
-                           <i class="fas fa-bars"></i>
+                           <svg class="button__menu--svg" class="fas fa-bars"></svg>
                         </button>         
 
                         <div class="menu__backdrop">
@@ -51,10 +50,10 @@
                             </li>
                         </div>    
                     </ul>
-                </div>
             </div>
         </nav>  
-    </section>                                                                           
+    </section>  
+     <!-- Header                                                                         
     <header>
         <div class="container">
             <div class="row">
@@ -69,10 +68,10 @@
                     </div>
                         <p class="header__customer--title">OUR TRUSTED CUSTOMERS</p>
                         <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="customer__logo">
-                </div> 
-                <figure class="header__img--wrapper">
-                    <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
-                </figure>
+                        <figure class="header__img--wrapper">
+                           <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
+                        </figure>
+                </div>
             </div>
         </div>
     </header>
