--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,34 +25,28 @@
                           <li><a href="#" class="nav__link">Login</a></li>
                           <li><a href="#" class="nav__link nav__link--primary">Sign Up</a></li>
                     </ul>
-                        <button class="btn__menu" onclick="openMenu()">
-                           <svg class="button__menu--svg" class="fas fa-bars"></svg>
+                        <button class="btn__menu" onclick="openMenu()" aria-label="Open menu">
+                            <svg class="button__menu--icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                             <path d="M3 6h18v2H3V6zm0 5h18v2H3v-2zm0 5h18v2H3v-2z" fill="currentColor"/>
+                           </svg>
                         </button>         
 
                         <div class="menu__backdrop">
                             <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-                            <i class="fas fa-times"></i>
+                              <i class="fas fa-times"></i>
                             </button>
-                    <ul class="menu__links">
-                            <li class="menu__list">
-                               <a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
-                            <li class="menu__list">
-                               <a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
-                           <li class="menu__list">
-                               <a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
-                            <li class="menu__list">
-                               <a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a></li>
-                            <li class="menu__list">
-                               <a href="#" class="menu__link" onclick="closeMenu()">Login</a></li>
-                            <li class="menu__list">
-                              <a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign Up</a>
-                            </li>
+                            <ul class="menu__links">
+                              <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
+                              <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
+                              <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
+                              <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a></li>
+                              <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Login</a></li>
+                              <li class="menu__list"><a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign Up</a></li>
+                            </ul>
                         </div>    
-                    </ul>
             </div>
         </nav>  
-    </section>  
-     <!-- Header                                                                         
+    </section>                                                                          
     <header>
         <div class="container">
             <div class="row">
