--- a/index.html
+++ b/index.html
@@ -55,15 +55,19 @@
                     <p class="header__description--para">Our templates are easy to setup, understand and customize.
                         Fully modular components with a variety of pages and components.
                     </p>
-                    <div class="input__container">
+                    <div class="header__email">
                         <input type="text" class="email__input" placeholder="Your E-Mail Address">
                         <button class="email__btn">Get Started</button>
                     </div>
+                    <div class="header__customer">
                         <p class="header__customer--title">OUR TRUSTED CUSTOMERS</p>
-                        <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="customer__logo">
+                        <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="customer__logo">                       
+                    </div>
+                
                         <figure class="header__img--wrapper">
-                           <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
+                        <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
                         </figure>
+                    
                 </div>
             </div>
         </div>
