--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treact Final Project</title>
     <script src="https://kit.fontawesome.com/d040ee6d7f.js" crossorigin="anonymous"></script>
-    
+    <link rel="stylessheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-<body>
-    
-</body>
-</html>
+
 <body>
     <section id="landing">
         <nav class="nav">
@@ -532,6 +530,5 @@
             </div>
         </div>
     </footer>
-
- </body>
+  </body>
 </html>
