--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                           <li><a href="#" class="nav__link nav__link--primary">Sign Up</a></li>
                     </ul>
                         <button class="btn__menu" onclick="openMenu()">
-                            <i class="fas fa-bars"></i>
+                           <i class="fas fa-bars"></i>
                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn__menu--svg">
                               <line x1="3" y1="12" x2="21" y2="12"></line>
                               <line x1="3" y1="6" x2="21" y2="6"></line>
@@ -530,5 +530,5 @@
             </div>
         </div>
     </footer>
-  </body>
-</html>
+</body>
+</htm
