--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
             <button class="btn__menu btn__menu--close" onclick="closeMenu()">
                 <i class="fas fa-times"></i>
             </button>
-            <ul class="menu__links">
-                <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
-                <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
-                <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
-                <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a></li>
-                <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Login</a></li>
-                <li class="menu__list"><a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign
-                        Up</a></li>
-            </ul>
-        </div>
+            <div class="menu__links">
+                <a href="#" class="menu__link" onclick="closeMenu()">About</a>
+                <a href="#" class="menu__link" onclick="closeMenu()">Blog</a>
+                <a href="#" class="menu__link" onclick="closeMenu()">Pricing</a>
+                <a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a>
+                <a href="#" class="menu__link" onclick="closeMenu()">Login</a>
+                <a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign
+                        Up</a>
+            </div>
         </div>
     </section>
     <header>
