--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treact Final Project</title>
@@ -29,13 +30,24 @@
                     <li><a href="#" class="nav__link nav__link--primary">Sign Up</a></li>
                 </ul>
                 <button class="btn__menu" onclick="openMenu()">
-                    <i class="fas fa-bars"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="btn__menu--svg">
+                        <line x1="3" y1="12" x2="21" y2="12"></line>
+                        <line x1="3" y1="6" x2="21" y2="6"></line>
+                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                    </svg>
                 </button>
             </div>
         </nav>
         <div class="menu">
             <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-                <i class="fas fa-times"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="light___StyledCloseIcon-lj69nl-14 fASujC">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
             </button>
             <div class="menu__links">
                 <a href="#" class="menu__link" onclick="closeMenu()">About</a>
@@ -44,36 +56,37 @@
                 <a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a>
                 <a href="#" class="menu__link" onclick="closeMenu()">Login</a>
                 <a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign
-                        Up</a>
+                    Up</a>
             </div>
         </div>
-    </section>
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="header__description">
-                    <h1>Beautiful React Templates<span class="purple"> for you.</span></h1>
-                    <p class="header__description--para">Our templates are easy to setup, understand and customize.
-                        Fully modular components with a variety of pages and components.
-                    </p>
-                    <div class="header__email">
-                        <input type="text" class="email__input" placeholder="Your E-Mail Address"
-                            style="border:2px solid rgb(229, 231, 235);">
-                        <button class="email__btn">Get Started</button>
-                    </div>
-                    <div class="header__customer">
-                        <p class="header__customer--title">OUR TRUSTED CUSTOMERS</p>
-                        <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="customer__logo">
-                    </div>
 
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="header__description">
+                        <h1>Beautiful React Templates<span class="purple"> for you.</span></h1>
+                        <p class="header__description--para">Our templates are easy to setup, understand and customize.
+                            Fully modular components with a variety of pages and components.
+                        </p>
+                        <div class="header__email">
+                            <input type="text" class="email__input" placeholder="Your E-Mail Address"
+                                style="border:2px solid rgb(229, 231, 235);">
+                            <button class="email__btn">Get Started</button>
+                        </div>
+                        <div class="header__customer">
+                            <p class="header__customer--title">OUR TRUSTED CUSTOMERS</p>
+                            <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="customer__logo">
+                        </div>
+
+                    </div>
+                    <figure class="header__img--wrapper;">
+                        <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg"
+                            class="header__img">
+                    </figure>
                 </div>
-                <figure class="header__img--wrapper;">
-                    <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
-                </figure>
-
             </div>
-        </div>
-    </header>
+        </header>
+    </section>
     <main>
         <section id="features__section">
             <div class="container">
@@ -81,8 +94,8 @@
                     <h3 class="section__tag">Features</h3>
                     <h2 class="section__title">We Have Amazing<span class="purple"> Service.</span></h2>
                     <div class="section__para">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eum nam fugiat maxime nobis
-                            soluta debitis expedita ad.</p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, non. Numquam voluptatibus non,
+                        pariatur recusandae facilis velit.
                     </div>
                     <div class="features">
                         <div class="feature__row">
