--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
         </section>
         <section id="steps">
-            <div class="steps__container">
+            <div class="container">
                 <div class="row">
                     <figure class="steps__img--wrapper">
                         <img src="assets/hero-screenshot-2.241aac1fbc66db29d873.png" class="steps__img"
@@ -256,7 +256,7 @@
             </div>
         </section>
         <section id="values">
-            <div class="container__values">
+            <div class="container">
                 <div class="row">
                     <div class="values__description">
                         <div class="section__tag">Values</div>
@@ -315,12 +315,12 @@
                 </div>
         </section>
         <section id="Pricing">
-            <div class="pricing__container">
+            <div class="container">
                 <div class="pricing__row">
                     <div class="pricing__tag">Pricing</div>
                     <h2 class="price__title">Reasonable & Flexible<span class="purple"> Plans.</span></h2>
                     <div class="pricing__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque id
-                        minima explicabo natus dignissimos quas alias tempora repellendus ut provident.</div>
+                        minima explicabo natus dignissimos quas alias tempora repellendus.</div>
                     <div class="plans">
                         <div class="plan">
                             <div class="plan__stripe"></div>
