--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div class="container">
                 <div class="pricing__row">
                     <div class="pricing__tag">Pricing</div>
-                    <h2 class="price__title">Reasonable & Flexible<span class="purple"> Plans.</span></h2>
+                    <h2 class="pricing__title">Reasonable & Flexible<span class="purple"> Plans.</span></h2>
                     <div class="pricing__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque id
                         minima explicabo natus dignissimos quas alias tempora repellendus.</div>
                     <div class="plans">
@@ -355,7 +355,7 @@
                                 <p class="plan__feature">Priority Assistance</p>
                             </div>
                             <div class="plan__bottom">
-                                <button class="plan__button">buy now</button>
+                                <button class="plan__button">Buy now</button>
                             </div>
                         </div>
                         <div class="plan">
@@ -428,7 +428,7 @@
                                     <button class="testimonial__button">
                                         <svg fill="none" stroke="rgb(100,21,255)" stroke-linecap="round"
                                             stroke-linejoin="round" stroke-width="3" viewBox="0 0 24 24">
-                                            <path d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                                           <path d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
                                         </svg>
                                     </button>
                                     <div class="divider"></div>
