--- a/index.html
+++ b/index.html
@@ -512,35 +512,35 @@
         </svg>
         <div class="row footer__row">
             <div class="footer__columns">
-                <div class="footer__columns">
+                <div class="footer__column">
                     <div class="footer__column--title">MAIN</div>
-                    <a class=footer__link>Blog</a>
-                    <a class="footer__link">FAQs</a>
-                    <a class="footer__link">Support</a>
-                    <a class="footer__link">About Us</a>
+                    <a class=footer__column--link>Blog</a>
+                    <a class="footer__column--link">FAQs</a>
+                    <a class="footer__column--link">Support</a>
+                    <a class="footer__column--link">About Us</a>
                 </div>
-                <div class="footer__columns">
+                <div class="footer__column">
                     <div class="footer__column--title">PRODUCT</div>
                     <a class=footer__column--link>Login</a>
                     <a class="footer__column--link">Personal</a>
                     <a class="footer__column--link">Business</a>
                     <a class="footer__column--link">Team</a>
                 </div>
-                <div class="footer__columns">
+                <div class="footer__column">
                     <div class="footer__column--title">PRESS</div>
                     <a class=footer__column--link>Logos</a>
                     <a class="footer__column--link">Events</a>
                     <a class="footer__column--link">Stories</a>
                     <a class="footer__column--link">Office</a>
                 </div>
-                <div class="footer__columns">
+                <div class="footer__column">
                     <div class="footer__column--title">TEAM</div>
                     <a class=footer__column--link>Career</a>
                     <a class="footer__column--link">Founders</a>
                     <a class="footer__column--link">Culture</a>
                     <a class="footer__column--link">Onboarding</a>
                 </div>
-                <div class="footer__columns">
+                <div class="footer__column">
                     <div class="footer__column--title">LEGAL</div>
                     <a class=footer__column--link>GDPR</a>
                     <a class="footer__column--link">Privacy Policy</a>
