--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="container">
                 <div class="row">
                     <div class="quality__description">
-                        <div class="section__tag"><span class="purple">QUALITY WORK</span></div>
+                        <div class="section__tag">QUALITY WORK</div>
                         <h2 class="section__title">Designed & Developed by<span class="purple"> Professionals</span>
                         </h2>
                         <p class="section__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis facere
@@ -314,9 +314,9 @@
 
                 </div>
         </section>
-        <section id="Pricing">
+        <section id="pricing">
             <div class="container">
-                <div class="pricing__row">
+                <div class="row">
                     <div class="pricing__tag">Pricing</div>
                     <h2 class="pricing__title">Reasonable & Flexible<span class="purple"> Plans.</span></h2>
                     <div class="pricing__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque id
@@ -390,7 +390,7 @@
         </section>
         <section id="testimonials">
             <div class="container">
-                <div class="row">
+                <div class="testimonial__row">
                     <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt
                         class="testimonials__img">
                     <div class="testimonials__description">
