--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </p>
                         <div class="header__email">
                             <input type="text" class="email__input" placeholder="Your E-Mail Address"
-                                style="border:2px solid rgb(229, 231, 235);">
+                                style="border:2px solid rgb(229, 231, 235)">
                             <button class="email__btn">Get Started</button>
                         </div>
                         <div class="header__customer">
@@ -79,7 +79,7 @@
                         </div>
 
                     </div>
-                    <figure class="header__img--wrapper;">
+                    <figure class="header__img--wrapper">
                         <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg"
                             class="header__img">
                     </figure>
