--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </section>
         <section id="values">
             <div class="container">
-                <div class="row">
+                <div class="values__row">
                     <div class="values__description">
                         <div class="section__tag">Values</div>
                         <h2 class="section__title">We Always Abide by Our<span class="purple"> Principles.</span></h2>
