--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <main>
         <section id="features__section">
             <div class="container">
-                <div class="row">
+                <div class="row__narrow">
                     <h3 class="section__tag">Features</h3>
                     <h2 class="section__title">We Have Amazing<span class="purple"> Service.</span></h2>
                     <div class="section__para">
