--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section id="features__section">
             <div class="container">
                 <div class="row__narrow">
-                    <h3 class="section__tag">Features</h3>
+                    <h3 class="feature__section--tag">Features</h3>
                     <h2 class="section__title">We Have Amazing<span class="purple"> Service.</span></h2>
                     <div class="section__para">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, non. Numquam voluptatibus non,
@@ -174,7 +174,7 @@
             <div class="container">
                 <div class="row">
                     <div class="quality__description">
-                        <div class="section__tag">QUALITY WORK</div>
+                        <div class="quality__section--tag">QUALITY WORK</div>
                         <h2 class="section__title">Designed & Developed by<span class="purple"> Professionals</span>
                         </h2>
                         <p class="section__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis facere
@@ -223,7 +223,7 @@
 
                     </figure>
                     <div class=steps__description>
-                        <div class="section__tag">STEPS</div>
+                        <div class="steps__section--tag">STEPS</div>
                         <h2 class="section__title">Easy to<span class=purple> Get Started.</span></h2>
                         <div class="steps__list">
                             <div class="step">
@@ -245,9 +245,10 @@
                                 <div class="step__number">03</div>
                                 <div class="step__description">
                                     <div class="step__title">Run</div>
-                                </div>
-                                <p class="step__para">Follow the instructions to setup and customize the template to
-                                    your needs.</p>
+                                
+                                    <p class="step__para">Follow the instructions to setup and customize the template to
+                                       your needs.</p>
+                                </div>       
                             </div>
 
                         </div>
