--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
         </section>
         <section id="values">
             <div class="container">
-                <div class="values__row">
+                <div class="values__row row">
                     <div class="values__description">
-                        <div class="section__tag">Values</div>
+                        <div class="values__section--tag">Values</div>
                         <h2 class="section__title">We Always Abide by Our<span class="purple"> Principles.</span></h2>
                         <div class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
                             reiciendis, unde deleniti, veniam tempore sed ut fugiat at hic mollitia iste nostrum vero
@@ -473,8 +473,8 @@
                            -284.1,0,-284.1C54.1,-284.1,108.1,-268.3,153.6,-239Z" fill="rgb(80,17,204)"></path>
                         </g>
                     </svg>
-                    <div class="start__container">
-                        <div class="start__row">
+                    <div class="start__container container">
+                        <div class="start__row row">
                             <div class="start__title">Developers all over the world are happily using Treact.</div>
                             <div class="start__buttons">
                                 <button class="start__button btn">Get Started</button>
